<resources>
    <string name="app_name">Student register</string>
    <string name="login_name">Login</string>
    <string name="reg_name">Registration</string>
    <string name="saveLoginTitle">login</string>
    <string name="saveLoginSummary">save login in app</string>
    <string name="savePasswordTitle">password</string>
    <string name="savePasswordSummary">save password in app</string>
    <string name="userHello">user_hello</string>
    <string name="userHelloTitle">User hello</string>
    <string name="settingsPreferences">Settings</string>
    <string-array name="languages">
        <item>RUSSIAN</item>
        <item>English</item>
    </string-array>
</resources>
