<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="save_login"
        android:title="@string/saveLoginTitle"
        android:summary="@string/saveLoginSummary" >
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="save_password"
        android:title="@string/savePasswordTitle"
        android:summary="@string/savePasswordSummary" >
    </CheckBoxPreference>
    <EditTextPreference
        android:key="user_hello"
        android:title="@string/userHelloTitle"
        android:summary="User Hello">

    </EditTextPreference>
    <ListPreference
        android:key="language_preference"
        android:title="Language Title"
        android:entries="@array/languages"
        android:entryValues="@array/languages"
        >

    </ListPreference>

    </PreferenceScreen>